--- a/index.css
+++ b/index.css
@@ -7,7 +7,8 @@ width:100%
 
 input{
   text-align:center;
-  display:block;
-  margin:2em;
-
+  display:inline-block;
+  margin:1em;
+  width:50px;
+  height:50px;
 }
